--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         
         <a-assets>
             <a-asset-item id="santaClaus" src="./SantaClaus.glb"></a-asset-item>
-            <a-asset-item id="reindeer" src="https://raw.githubusercontent.com/DemonstrationProjects/ARNewYearMaskDemo/main/Reindeer.glb"></a-asset-item>
+            <a-asset-item id="reindeer" src="https://cdn.jsdelivr.net/gh/DemonstrationProjects/ARNewYearMaskDemo@main/Reindeer.glb"></a-asset-item>
             <a-asset-item id="headModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/face-tracking/assets/sparkar/headOccluder.glb"></a-asset-item>            
         </a-assets>
         
