--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <button id="switchBtn">🔄</button>
 
     <script>
-      const maskNames = ['SantaClaus', 'Reindeer'];
-      const maskDisplayNames = ['🎅', '🦌'];
+      const maskNames = ['SantaClaus', 'Reindeer', 'Snowman', 'Glasses'];
+      const maskDisplayNames = ['🎅', '🦌', '☃️', '👓'];
       let currentIndex = 0;
 
       const maskEntity = document.getElementById('maskEntity');
