--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         #switchBtn:active {
             transform: translateX(-50%) scale(0.95);
         }
+
+        canvas {
+            touch-action: none;
+        }
     </style>
 </head>
 <body>
