--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
         </a-asset-item>
       </a-assets>
 
-      <a-camera active="false" position="0 0 0"></a-camera>
-
+      <a-camera active="false" position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-face-target="anchorIndex: 168">
         <a-gltf-model
           mindar-face-occluder
